2010-03-22  Jason Merrill  <jason@redhat.com>

	* c-pretty-print.c (pp_c_specifier_qualifier_list) [VECTOR_TYPE]:
	Use () rather than [], and move before the element type.

2010-03-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/configfiles.texi (Configuration Files): Removed
	fixinc/Makefile*, intl/Makefile.*.
	* doc/makefile.texi: Fixed markup.
	Abstract from version control system used.
	(Makefile): Removed obsolete gcc/java/parse.y example.
	* doc/sourcebuild.texi: Likewise.
	(Top Level): Added config, gnattools, libdecnumber, libgcc,
	libgomp, libssp.
	Removed fastjar.
	(Miscellaneous Docs): Clarify location.
	Added COPYING3, COPYING3.LIB.
	(Front End Directory): Moved Make-lang.in entry to new
	subsubsection.

2010-03-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR target/38085
	* config/i386/i386.c (x86_function_profiler)
	[!NO_PROFILE_COUNTERS]: Fix typo.
	* config/i386/gmon-sol2.c (_mcleanup) [__x86_64__]: Use call
	instead of callq.

2010-03-22  Janis Johnson  <janis187@us.ibm.com>
	    Rainer Orth <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/sourcebuild.texi (Test Directives): Split into six
	subsections, with most of the current text in new subsections
	Directives, Selectors, and Final Actions.
	(Directives): Split list of test directives into multiple
	subsubsections.
	(Selectors): Describe use and syntax of selectors.
	(Effective-Target Keywords): Describe all existing keywords.
	(Add Options): Describe features for dg-add-options.
	(Require Support): Describe variants of dg-require-support.
	(Final Actions): Describe commands to use in dg-final.

2010-03-22  Michael Matz  <matz@suse.de>

	PR middle-end/43475
	* recog.c (validate_replace_rtx_group): Replace also in
	REG_EQUAL and REG_EQUIV notes.

2010-03-22  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43390
	* tree-vect-stmts.c (get_vectype_for_scalar_type): Make
	sure vector extracts are type correct.

2010-03-22  Richard Guenther  <rguenther@suse.de>

	PR middle-end/40106